# op

./: README.md  command  detailed_logs.txt  pyproject.toml  requirements.txt  run.py
src/agent/: cli.py  configuration.py  graph.py  llm_config.py  state.py  tracer.py  types.py  workflow.py
src/agent/nodes/: __init__.py  analyze_insurance_page.py  base.py  extract_tables.py  generate_presentation.py  init_node.py  message_processor.py  page_parser.py  process_images.py  setup_script.py  setup_slide.py
src/agent/prompts/: analyze_insurance_page.py  extract_tables.py  generate_presentation.py  setup_script.py  setup_slides.py  update_script.py  update_script_prompt.py  update_slide.py  update_slide_prompt.py  validator.py
src/decks/FEN_ADW/: final_state.json  slides.md  state.json
src/decks/FEN_ADW_1/: slides.md
src/decks/FEN_AH/: final_state.json  slides.md  state.json
src/decks/FEN_AH_1/: slides.md  state.json
src/decks/FEN_AMER/: final_state.json  instructions.md  slides.md  state.json
src/decks/FEN_AMER_old/: final_state.json  slides.md  state.json
src/decks/FEN_BAC/: final_state.json  slides.md  state.json
src/decks/FEN_BCR/: final_state.json  slides.md  state.json
src/decks/FEN_BWA/: final_state.json  slides.md  state.json
src/decks/FEN_EVE/: final_state.json  slides.md  state.json
src/decks/FEN_EVE_1/: final_state.json  slides.md  state.json
src/decks/FEN_EVE_2/: final_state.json  slides.md  state.json
src/decks/FEN_EVE_9/: final_state.json  slides.md  state.json  validated_state.json
src/decks/FEN_HAO/: final_state.json  slides.md  (+1 more)
(+99 files in other folders)
